# fabricaNeeds

./: .pdm-python  README.en-US.md  README.md  pyproject.toml
backend/: .gitignore  db.sqlite3  manage.py  pyproject.toml
backend/FabricaNeeds/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
backend/FabricaNeeds/migrations/: 0001_initial.py  0002_item_last_update.py  0002_rename_ativo_item_active.py  0003_alter_history_date.py  0003_balance.py  0004_history.py  0004_remove_history_item_history_item.py  0005_rename_item_history_items.py  0006_remove_history_items_alter_history_user_itemshistory.py  0007_alter_itemshistory_options_history_value.py
backend/FabricaNeeds/models/: __init__.py  balance.py  history.py  item.py
backend/FabricaNeeds/serializers/: __init__.py  balance.py  history.py  item.py  user.py
backend/FabricaNeeds/views/: __init__.py  balance.py  history.py  item.py  user.py
backend/config/: settings.py  urls.py
front/: README.md  index.html  package-lock.json  package.json
front/src/: App.vue  main.js
front/src/components/: Header.vue
front/src/router/: index.js
front/src/views/: HomeView.vue
frontend/: index.html  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  balance.js  history.js  items.js  users.js
frontend/src/assets/: main.css
frontend/src/assets/css/: addcards.css  main.css
frontend/src/components/: AddBalance.vue  AddItemsToList.vue  BuyItemsFromList.vue  Header.vue  ItemsDetails.vue  ItemsTable.vue  ListRegisteredItems.vue  RegisterItemsTable.vue  SideBar.vue
frontend/src/data/: db.json  routes.json
frontend/src/plugins/: axios.js  vuetify.js
frontend/src/router/: index.js
frontend/src/stores/: authStore.js  balanceStore.js  buyItemsStore.js  historyStore.js  itemStore.js  userStore.js
frontend/src/utils/: formValidationRules.js
frontend/src/views/: HistoryView.vue  HomeView.vue  RegisterItemView.vue  SignInView.vue  SignUpView.vue
(+2 files in other folders)
