[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gianluca Starke", email = "gianlucastarke@gmail.com"},
    {name = "Marcus Costa Graciano", email = "marcusviniciusgraciano04@gmail.com"},
    {name = "Pietro Flemming", email = "pietroflemming@gmail.com"},
    {name = "João Vitor Coêlho", email = "joao.vitor-coelho@hotmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
